<?xml version="0.1"?>
<package>
  <name>vector_driver</name>
  <version>0.1.0</version>
  <description>The vector_driver package</description>

  <maintainer email="griff.peirce@gmail.com">Griffin Peirce</maintainer>

  <license>Apache License 2.0</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->

  <author email="griff.peirce@gmail.com">Griffin Peirce</author>
  <author email="t.ogura@gmail.com">Takashi Ogura</author>
  <author email="semael23@gmail.com">Peter Rudolph</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>camera_info_manager_py</build_depend> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>twist_mux</build_depend>

  <!-- <run_depend>camera_info_manager_py</run_depend> -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>tf2_msgs</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>

  <export>
  </export>
</package>
